--- a/vue2/example.less
+++ b/vue2/example.less
@@ -1,3 +1,24 @@
+.sr-fade-enter-active{
+  transition:opacity .25s ease;
+}
+.sr-fade-leave-active {
+  transition:opacity .25s ease;
+}
+.sr-fade-enter,.sr-fade-leave-to{
+  opacity:0;
+}
+.box{
+	box-sizing:border-box;
+}
+.default-shadow{
+	box-shadow: 0px 0px 30px 0px rgba(79,98,218,0.22);
+	-moz-box-shadow: 0px 0px 30px 0px rgba(79,98,218,0.22);
+	-webkit-box-shadow: 0px 0px 30px 0px rgba(79,98,218,0.22);
+}
+.default-font-size{
+	font-size:1.4vw;
+	line-height:1.8vw;
+}
 .vue-star-rating{
 	position:relative;
 	.rating-star{
